# my_first_env

./: DEPLOYMENT_CHECKLIST.md  Dockerfile  FINAL_CHECKLIST.md  GRADERS.md  HF_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  OPENENV_SPEC_COMPLIANCE.md  README.md  SUBMISSION_READY.md  __init__.py  client.py  examples.py  gitignore  inference.py  models.py  openenv.yaml  pre_submission_check.py  pyproject.toml  requirements.txt  validate.py  verify_openenv_spec.py
.github/workflows/: sync-to-hf.yml
server/: Dockerfile  __init__.py  app.py  my_first_env_environment.py
