[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-first-env"
version = "0.1.0"
description = "Smart Water Tank Environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.3",
    "openenv-core[core]>=0.2.2",
    "pydantic>=2.12.5",
    "uvicorn>=0.43.0",
    "openai"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.md"]